Update for talks

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,98 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+<p>I have given many talks since I began my PhD in 2018. I try to keep an up-to-date and full list below, but unfortunately fail...</p>
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+<ul>
+<li><strong>EAS 2025</strong> European Astronomical Society meeting. Two talks. June 2025, Cork, Ireland. (<strong>Invited</strong>)</li>
 
-{% endif %}
+<li><strong>BIRS</strong> Detection and Analysis of Gravitational Waves in the era of Multi-Messenger Astronomy conference at Banff Research Station. November 2024, Banff, Canada. (<strong>Invited</strong>)</li>
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+<li><strong>Leicester-Liverpool John Moores</strong> Joint Department Seminar. October 2024, Liverpool, UK. (<strong>Invited</strong>)</li>
+
+<li><strong>Oxford University</strong> SPIMAX Seminar. October 2024, Oxford, UK. (<strong>Invited</strong>)</li>
+
+<li><strong>Astrocolibiri workshop</strong> Workshop on multi-messenger astronomy. September 2024, Paris. (<strong>Invited</strong>)</li>
+
+<li><strong>Swedish Academy of Sciences</strong> Conference on gravitational-wave astronomy. June 2024 (<strong>Invited</strong>)</li>
+
+<li><strong>Uppsala University</strong> Joint nuclear physics and astrophysics seminar. May 2024 (<strong>Invited</strong>)</li>
+
+<li><strong>Australian National University</strong> Joint CGA-RSAA Seminar. February 2024 (<strong>Invited</strong>)</li>
+
+<li><strong>Lund University</strong> 2-day conference on chemical enrichment of the Universe at Lund. October 2023 (<strong>Invited</strong>)</li>
+
+<li><strong>OKC Seminar, Stockholm University</strong> Department Colloquium at the Oskar Klein Centre, Stockholm University. October 2023 (<strong>Invited</strong>)</li>
+
+<li><strong>OKC@15</strong> 3 day conference to celebrate the 15 year anniversary of the Oskar Klein Centre. October 2023. Contributed Talk.</li>
+
+<li><strong>Radboud Colloquium</strong> Department Colloquium at Radboud University. October 2023 (<strong>Invited</strong>)</li>
+
+<li><strong>Colloquium, Hamburg University</strong> Department Colloquium at Hamburg University. October 2023 (<strong>Invited</strong>)</li>
+
+<li><strong>Radiative transfer in Kilonovae, Stockholm</strong> Contributed talk. September 2023</li>
+
+<li><strong>Engrave Webinar</strong> Virtual seminar to the Engrave collaboration. June 2023 (<strong>Invited</strong>)</li>
+
+<li><strong>Humboldt University of Berlin</strong> Ready, set, go! conference on preparations for O4 LIGO-Virgo-KAGRA observing run. May 2023 (<strong>Invited</strong>)</li>
+
+<li><strong>University of Wisconsin-Milwaukee</strong> Centre of Gravitation, Cosmology & Astrophysics Seminar. October 2022 (<strong>Invited</strong>)</li>
+
+<li><strong>Monash University</strong> Astrophysics Seminar. August 2022 (<strong>Invited</strong>)</li>
+
+<li><strong>Melbourne University</strong> Physics Seminar. July 2022</li>
+
+<li><strong>Swinburne University</strong> Astrophysics Seminar. July 2022</li>
+
+<li><strong>Columbia University</strong> THEA Seminar. July 2022</li>
+
+<li><strong>Flatiron Institute CCA</strong> Gravitational-wave and compact objects group meeting. June 2022. (<strong>Invited</strong>)</li>
+
+<li><strong>Aspen Center for Physics</strong> Challenges for multi-messenger astronomy. Workshop on next-generation gravitational-wave instruments. June 2022. (<strong>Invited</strong>)</li>
+
+<li><strong>Gran Sasso Institute, L'Aquila, Italy.</strong> Seminar. May 2022</li>
+
+<li><strong>Institut d'Astrophysique de Paris</strong> Multi-messenger Astronomy virtual seminar. Feb 2022 (<strong>Invited</strong>)</li>
+
+<li><strong>Saas-Fee Winter school</strong> School on gravitational-wave multimessenger astronomy. Feb 2022</li>
+
+<li><strong>Transients workshop, Oskar Klein Centre</strong> Virtual workshop. January 2022 (<strong>Invited</strong>)</li>
+
+<li><strong>IAU Symposium, Gran Sasso</strong> Virtual conference. November 2021</li>
+
+<li><strong>Amaldi Conference, 2021</strong> Virtual conference. June 2021</li>
+
+<li><strong>Caltech, Pasadena, USA.</strong> Virtual seminar. November 2020 (<strong>Invited</strong>)</li>
+
+<li><strong>Flatiron Institute, New York, USA.</strong> Virtual seminar. August 2020</li>
+
+<li><strong>University of California, Berkeley, USA.</strong> Virtual seminar. August 2020</li>
+
+<li><strong>Gran Sasso Institute, L'Aquila, Italy.</strong> Virtual seminar. July 2020</li>
+
+<li><strong>University of Bath, Bath, U.K.</strong> Virtual seminar. July 2020</li>
+
+<li><strong>University of Leicester, Leicester, U.K.</strong> Virtual seminar. July 2020 (<strong>Invited</strong>)</li>
+
+<li><strong>University College London, London, U.K.</strong> Virtual seminar. July 2020</li>
+
+<li><strong>University of Coimbra, Coimbra, Portugal.</strong> Virtual seminar. June 2020 (<strong>Invited</strong>)</li>
+
+<li><strong>Perimeter Institute, Waterloo, Canada.</strong> Virtual seminar. June 2020</li>
+
+<li><strong>Oskar Klein Centre, Stockholm, Sweden.</strong> Virtual seminar. June 2020</li>
+
+<li><strong>University of Melbourne, Melbourne, Australia.</strong> Virtual seminar. June 2020</li>
+
+<li><strong>University of Western Australia, Perth, Australia.</strong> Virtual seminar. June 2020 (<strong>Invited</strong>)</li>
+
+<li><strong>Yokohama Yamada conference, November 2019.</strong> Gamma-ray bursts in the gravitational-wave era in Yokohama, Japan.</li>
+
+<li><strong>YITP, long-term workshop, September-October 2019.</strong> Multi-messenger astrophysics in the gravitational-wave era. long-term workshop in Kyoto, Japan.</li>
+
+<li><strong>ANITA meeting, February 2019.</strong> Annual Australian National Institute for Theoretical Astrophysics (ANITA) meeting at Swinburne University.</li>
+
+<li><strong>ASA meeting, July 2018.</strong> Annual Astronomical Society of Australia meeting at Swinburne University.</li>
+
+<li><strong>ANITA meeting, February 2018.</strong> ANITA meeting at University of Western Australia.</li>
+</ul>
