--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -8,6 +8,12 @@ author_profile: true
 <p>I have given many talks since I began my PhD in 2018. I try to keep an up-to-date and full list below, but unfortunately fail...</p>
 
 <ul>
+<li><strong>ICESUN Seminar</strong> September 2025, Chinese Academy of Sciences, Yunnan (remote). (<strong>Invited</strong>)</li>
+
+<li><strong>Rattle and shine conference on BNS mergers.</strong> September 2025, Hamburg, Germany. (<strong>Invited</strong>)</li>
+
+<li><strong>Wetton Workshop on gravitational-wave multi-messenger astronomy.</strong> September 2025, Oxford, U.K. (<strong>Invited</strong>)</li>
+
 <li><strong>EAS 2025</strong> European Astronomical Society meeting. Two talks. June 2025, Cork, Ireland. (<strong>Invited</strong>)</li>
 
 <li><strong>BIRS</strong> Detection and Analysis of Gravitational Waves in the era of Multi-Messenger Astronomy conference at Banff Research Station. November 2024, Banff, Canada. (<strong>Invited</strong>)</li>
