--- a/pr-preview/pr-2/md/index.html
+++ b/pr-preview/pr-2/md/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://nikhil-sarin.github.io/nikhil-sarin.github.io/pr-preview/pr-2/markdown/">
-  <script>location="https://nikhil-sarin.github.io/nikhil-sarin.github.io/pr-preview/pr-2/markdown/"</script>
-  <meta http-equiv="refresh" content="0; url=https://nikhil-sarin.github.io/nikhil-sarin.github.io/pr-preview/pr-2/markdown/">
+  <link rel="canonical" href="https://nikhil-sarin.github.io/pr-preview/pr-2/markdown/">
+  <script>location="https://nikhil-sarin.github.io/pr-preview/pr-2/markdown/"</script>
+  <meta http-equiv="refresh" content="0; url=https://nikhil-sarin.github.io/pr-preview/pr-2/markdown/">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://nikhil-sarin.github.io/nikhil-sarin.github.io/pr-preview/pr-2/markdown/">Click here if you are not redirected.</a>
+  <a href="https://nikhil-sarin.github.io/pr-preview/pr-2/markdown/">Click here if you are not redirected.</a>
 </html>
